--- a/src/components/card/card.component.html
+++ b/src/components/card/card.component.html
@@ -1,3 +1,8 @@
-<p>
-  card works!
-</p>
+<div class="card">
+  <img class="card-img-top" [src]="'assets/images/' +  cityDetail.name + '.png'" [alt]="cityDetail.name">
+  <div class="card-body">
+    <h5 class="card-title">{{cityDetail.name}}</h5>
+    <p class="card-text"><i class="fas fa-temperature-low"></i> {{cityDetail.main.temp }} ºC</p>
+    <a [routerLink]="['/weather/' + cityDetail.name]" class="btn btn-primary">More info</a>
+  </div>
+</div>
