--- a/src/views/weather-city-info/weather-city-info.component.html
+++ b/src/views/weather-city-info/weather-city-info.component.html
@@ -1,3 +1,6 @@
-<p>
-  weather-city-info works!
-</p>
+<div class="container">
+  <div class="card-detail-container">
+      <app-card-detail [data]="dataWeather"></app-card-detail>
+  </div>
+</div>
+
