added card-detail, table-detail, custom date pipe and asign interfaces

--- a/src/views/weather-city-info/weather-city-info.component.html
+++ b/src/views/weather-city-info/weather-city-info.component.html
@@ -2,5 +2,10 @@
   <div class="card-detail-container">
       <app-card-detail [data]="dataWeather"></app-card-detail>
   </div>
+
+  <div class="table-detail-container">
+    <app-table-detail [dataHistory]="dataHistory"></app-table-detail>
+  </div>
+
 </div>
 
