--- a/src/views/home/home.component.scss
+++ b/src/views/home/home.component.scss
@@ -2,9 +2,9 @@
   margin-top: 5rem;
 }
 
-.spinner {
-  justify-content: center;
+.loader-container {
   display: flex;
-  margin-top: 5rem;
-  font-size: 4rem
+  justify-content: center;
+  padding: 5rem;
+  font-size: 5rem;
 }
